0.12.6
======
 * Copy XA Form1 tracks always in TAO writing mode.
 * Support for media:/ urls.
 * No extra whitespace when renaming audio files in a data project anymore.
 * Fixed verification of multisession CDs (thanks to simon@munton.demon.co.uk)

0.12.5
======
 * Fixed the progressbar in the file view
 * It is possible to add the "New Data DVD Project" button to the welcome window again.
 * Fixed problems with unreadable items when using a non-standard color scheme
 * Properly set the permissions on cdrecord versions >= 2.01.01a02
 * Fixed the "Disabled start button in Copy dialog" bug.
 * Little window layout fix in K3bSetup2.
 * Always use sector size 2048 when only creating an image in CD Copy. This means extracted
   iso images from CDs with non-Mode1 tracks are useable again.
 * Preserve directory permissions and user/group id in data projects when using the "backup" option.

0.12.4
======
 * Fixed --cdimage and --dvdimage parameters.
 * Fixed the file browser menu. Now it contains the bookmarks and "add to project" actions again.
 * Fixed Index 0 (Pregap) handling in audio cue files.
 * Improved handling of broken cue files: K3b now searches the directory for image files that could fit
   the cue file in case the FILE entry is bogus.
 * Always try to create a new session in case the old one has been imported regardless of the inserted
   medium's free space.
 * Fixed DVD-RW Restricted Overwrite media handling
 * Use RAW writing mode for audio CDs in case the writer does not support DAO but RAW.
 * Fixed compile problems with latest ffmpeg builds.
	
0.12.3
======
 * Ignore dock config from K3b versions older than 0.12
 * Do not delete DVD project iso image if "remove image" is unchecked.
 * Properly load multisession default settings.
 * Update device selection boxes when devices are added or removed via HAL.
 * Properly cancel DVD project writing.
 * Fixed DVD+RW session import

0.12.2
======